--- a/app/src/main/res/layout/fragment_catagory.xml
+++ b/app/src/main/res/layout/fragment_catagory.xml
@@ -137,7 +137,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:contentDescription="Litters and Supplies"
-                        android:src="@drawable/litter_pop"
+                        android:src="@drawable/litter"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
