--- a/app/src/main/res/layout/item_dog_food.xml
+++ b/app/src/main/res/layout/item_dog_food.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#458AAC"
+    android:background="@drawable/shape"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -58,5 +59,3 @@
         android:textColor="#458AAC"
         android:text="@string/add_to_cart" />
 </LinearLayout>
-
-
