--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,17 +61,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ListView
-            android:id="@+id/ProfileList"
-            android:layout_width="409dp"
-            android:layout_height="200dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="200dp"
-            android:layout_marginEnd="1dp"
+        <Button
+            android:id="@+id/viewOrdersbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="184dp"
+            android:text="@string/view_orders"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:backgroundTint="#458AAC"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
