--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,7 +50,9 @@
                 android:id="@+id/proceed_to_payment_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Proceed to Payment" />
+                android:text="Proceed to Payment"
+                android:textColor="@color/white"
+                android:background="@drawable/button_bg"/>
         </LinearLayout>
 
 
