--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,10 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
-    <color name="selected_color">#808080
-    </color>
+    <color name="selected_color">#808080</color>
+    <color name="white">#FFFFFF</color>
+    <color name="primary">#458AAC</color>
+    <color name="light_blue">#B3E5FC</color>
+    <color name="dark_blue">#0288D1</color>
 
 </resources>
