--- a/app/src/main/res/layout/item_dog_food.xml
+++ b/app/src/main/res/layout/item_dog_food.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
@@ -45,7 +46,8 @@
         android:text="0"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/product_rating"
-        app:layout_constraintStart_toStartOf="@+id/product_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/product_name" />
 
     <RatingBar
@@ -54,27 +56,30 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="8dp"
         android:isIndicator="true"
         android:numStars="5"
         android:outlineAmbientShadowColor="#DDEFF3"
         android:scaleX="0.75"
         android:scaleY="0.75"
         android:stepSize="0.5"
-        app:layout_constraintBottom_toTopOf="@+id/add_to_cart_button"
+        app:layout_constraintBottom_toTopOf="@+id/review_count"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/product_price" />
 
     <TextView
         android:id="@+id/review_count"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:text="123 reviews"
         android:textSize="12sp"
-        app:layout_constraintEnd_toStartOf="@+id/add_to_cart_button"
-        app:layout_constraintStart_toStartOf="@+id/add_to_cart_button"
+        app:layout_constraintBottom_toTopOf="@+id/add_to_cart_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/product_rating" />
 
     <Button
@@ -87,5 +92,7 @@
         android:text="@string/add_to_cart"
         android:textColor="#458AAC"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
