--- a/app/src/main/res/layout/item_dog_food.xml
+++ b/app/src/main/res/layout/item_dog_food.xml
@@ -32,6 +32,7 @@
         android:text="product_name"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/product_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
         android:gravity="center"
         android:text="0"
         android:textSize="14sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/product_rating"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +79,7 @@
         android:gravity="center"
         android:text="123 reviews"
         android:textSize="12sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/add_to_cart_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
