--- a/app/src/main/res/layout/item_dog_food.xml
+++ b/app/src/main/res/layout/item_dog_food.xml
@@ -42,11 +42,12 @@
         android:id="@+id/product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="4dp"
         android:gravity="center"
         android:text="0"
-        android:textSize="14sp"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/product_rating"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,21 +55,27 @@
 
     <RatingBar
         android:id="@+id/product_rating"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         android:isIndicator="true"
         android:numStars="5"
-        android:outlineAmbientShadowColor="#DDEFF3"
-        android:scaleX="0.75"
-        android:scaleY="0.75"
-        android:stepSize="0.5"
-        app:layout_constraintBottom_toTopOf="@+id/review_count"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/product_price" />
+        android:stepSize="0.1"
+        android:scaleX="0.5"
+        android:scaleY="0.5"
+        android:progressTint="@color/star_color"
+    android:secondaryProgressTint="@color/star_color"
+    android:progressBackgroundTint="@color/empty_star_color"
+    android:progressTintMode="src_in"
+    android:secondaryProgressTintMode="src_in"
+    android:progressBackgroundTintMode="src_in"
+    app:layout_constraintBottom_toTopOf="@+id/review_count"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/product_price" />
+
 
     <TextView
         android:id="@+id/review_count"
